--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "allowJs": true
   },
   "include": [
-    "src/**/*.ts",
-    "./node_modules/decentraland-builder-scripts/types.d.ts"
+    "src/**/*.ts"
   ],
   "extends": "./node_modules/decentraland-ecs/types/tsconfig.json"
 }
